@@ -1,3 +1,4 @@
+	* back-off tracker hostname looksups resulting in NXDOMAIN
 	* fix external IP voting for multi-homed DHT nodes
 	* deprecate broadcast_lsd setting. Just use multicast
 	* deprecate upnp_ignore_nonrouters setting
